--- a/package.json
+++ b/package.json
@@ -4,24 +4,35 @@
   "description": "A small store for storing labels for use on webistes, etc.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register"
+    "test": "mocha --compilers js:babel-core/register",
+    "start": "node index.js",
+    "build": "webpack --config webpack.config.js"
   },
   "author": "Josh Gordon <npm@joshgordon.net>",
   "license": "BSD-3-Clause",
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "jquery": "^2.2.3",
     "q": "^1.4.1",
     "sqlite3": "^3.1.3"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
     "babel-core": "^6.7.7",
+    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-runtime": "^6.6.1",
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
+    "less": "^2.6.1",
+    "less-loader": "^2.2.3",
     "mocha": "^2.4.5",
+    "raw-loader": "^0.5.1",
     "should": "^8.3.1",
-    "supertest": "^1.2.0"
+    "style-loader": "^0.13.1",
+    "supertest": "^1.2.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.0"
   },
   "directories": {
     "test": "test"
